--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </form>
             <a href="#" class="anchor">Forgot password</a>
 
-            <button>login</button>
+            <buttonclear>login</button>
 
 
         </div>
